appId: teleport.example
---
- launchApp
- waitForAnimationToEnd
- runFlow:
    file: ../subflows/open-example.yml
    env:
      EXAMPLE_CATEGORY: "fixture"
      EXAMPLE_ID: "navigation-lifecycle"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: NavigationScreen1Mounted
- tapOn:
    id: "unmount"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: NavigationScreen1Unmounted
- tapOn:
    id: "mount"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: NavigationScreen1Mounted
- tapOn:
    id: "go_next"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: NavigationScreen2
- tapOn:
    id: "go_back"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: NavigationScreen1Mounted
