appId: teleport.example
---
- launchApp
- waitForAnimationToEnd
- runFlow:
    file: ../subflows/open-example.yml
    env:
      EXAMPLE_CATEGORY: "fixture"
      EXAMPLE_ID: "dynamic_children"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: DynamicChildrenInitial
- tapOn: "Move to portal"
- tapOn: "Add child"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: DynamicChildrenAddedAndTeleported
- tapOn: "Move back"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: DynamicChildrenAdded
- tapOn: "Remove child"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: DynamicChildrenInitial
