appId: teleport.example
---
- launchApp
- waitForAnimationToEnd
- runFlow:
    file: ../subflows/open-example.yml
    env:
      EXAMPLE_CATEGORY: "fixture"
      EXAMPLE_ID: "instant_root"
- tapOn:
    point: "10%,15%"
- assertVisible: "OK"
- tapOn: "OK"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: InstantRootInitial
- tapOn: "Move back"
- tapOn:
    id: "touchable"
- assertVisible: "OK"
- tapOn: "OK"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: InstantRootTeleportedBack
