appId: teleport.example
---
- launchApp
- waitForAnimationToEnd
- runFlow:
    file: ../subflows/open-example.yml
    env:
      EXAMPLE_CATEGORY: "fixture"
      EXAMPLE_ID: "react_native_touchable"
- assertVisible:
    id: "touchable"
- tapOn:
    id: "touchable"
- assertVisible: "OK"
- tapOn: "OK"
- tapOn: "Move to portal"
- tapOn:
    point: "10%,15%"
- assertVisible: "OK"
- tapOn: "OK"
- tapOn: "Move back"
- tapOn:
    id: "touchable"
- assertVisible: "OK"
- tapOn: "OK"
