appId: teleport.example
---
- launchApp
- waitForAnimationToEnd
- runFlow:
    file: ../subflows/open-example.yml
    env:
      EXAMPLE_CATEGORY: "demo"
      EXAMPLE_ID: "menu"
- assertVisible:
    text: "Selected: none"

- tapOn:
    text: "^Choose a country.*$"
- tapOn:
    text: "^Portugal$"
- assertVisible:
    text: "Selected: portugal"

- tapOn:
    text: "^portugal.*$"
- tapOn:
    text: "^France$"
- assertVisible:
    text: "Selected: france"

- tapOn:
    text: "^france.*$"
- tapOn:
    text: "^Italy$"
- assertVisible:
    text: "Selected: italy"
