appId: teleport.example
---
- launchApp
- waitForAnimationToEnd

# Open the Recycling example.
- runFlow:
    file: ../subflows/open-example.yml
    env:
      EXAMPLE_CATEGORY: "fixture"
      EXAMPLE_ID: "recycling"

# Step 1: Teleport into the host for the first time
- tapOn:
    id: "teleport_first_time"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: RecyclingFirstTeleport

# Step 2: Unmount the host
- tapOn:
    id: "unmount_host"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: RecyclingHostUnmounted

# Step 3: Remount the host
- tapOn:
    id: "remount_host"

# Step 4: Teleport into the remounted host a second time.
- tapOn:
    id: "teleport_second_time"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: RecyclingSecondTeleport
